# mira-sim-nano

./: .gitignore  CLAUDE.md  COMMANDS.md  README.md
src/custom_msgs/: CMakeLists.txt  package.xml
src/custom_msgs/msg/: Commands.msg  Telemetry.msg
src/mira_pybullet_sim/: README.md  package.xml  setup.cfg  setup.py
src/mira_pybullet_sim/config/: sim_params.yaml
src/mira_pybullet_sim/launch/: sim.launch.py
src/mira_pybullet_sim/mira_pybullet_sim/: conventions.py  physics.py  scripted_test.py  sim_node.py  teleop_keyboard.py
